# robotiq_modular_gripper

./: README.md
robotiq_140_gripper_description/: CMakeLists.txt  package.xml
robotiq_140_gripper_description/rviz/: visualization.rviz
robotiq_140_gripper_description/urdf/: robotiq_140.urdf  robotiq_140.urdf.xacro  robotiq_140_hros_support.urdf.xacro  robotiq_140_world.urdf.xacro
robotiq_85_gripper_description/: CMakeLists.txt  package.xml
robotiq_85_gripper_description/meshes/: 2-F-85_1_l.dae  2-F-85_1_r.dae  2-F-85_2_l.dae  2-F-85_2_r.dae  2-F-85_3_l.dae  2-F-85_3_r.dae  2-F-85_4_l.dae  2-F-85_4_r.dae
robotiq_85_gripper_description/rviz/: visualization.rviz
robotiq_85_gripper_description/urdf/: robotiq_85.urdf  robotiq_85.urdf.xacro  robotiq_85_hros_support.urdf.xacro  robotiq_85_world.urdf.xacro
robotiq_gazebo/launch/: robotiq_140.launch.py  robotiq_85.launch.py  robotiq_hande.launch.py
robotiq_gazebo/scripts/: spawn_robotiq85.py
robotiq_gripper_gazebo_plugins/: CMakeLists.txt  package.xml
robotiq_gripper_gazebo_plugins/include/robotiq_gripper_gazebo_plugins/: GazeboGraspGripper.h  RobotiqGripperPlugin.h  RobotiqLinearPlugin.h  RobotiqPlugin.h  spline.hpp
robotiq_gripper_gazebo_plugins/src/: GazeboGraspGripper.cpp  RobotiqGripperPlugin.cpp  RobotiqLinearPlugin.cpp  RobotiqPlugin.cpp  spline.cpp
robotiq_hande_gripper_description/: CMakeLists.txt  package.xml
robotiq_hande_gripper_description/rviz/: visualization.rviz
robotiq_hande_gripper_description/urdf/: hande_gripper_hros_support.urdf.xacro  robotiq_hande.urdf  robotiq_hande.urdf.xacro  robotiq_hande_world.urdf.xacro
