<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_gripper_gazebo_plugins</name>
  <version>0.0.1</version>
  <description>robotiq gripper Gazebo plugin</description>
  <license>All rights reserved</license>
  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <author email="ibai@erlerobotics.com">Ibai Apellaniz</author>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>
  <maintainer email="yue@erlerobotics.com">Yue Erro</maintainer>
  <url type="repository">https://github.com/AcutronicRobotics/robotiq_modular_gripper</url>
  <url type="bugtracker">https://github.com/AcutronicRobotics/robotiq_modular_gripper/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>hrim_actuator_gripper_msgs</build_depend>
  <build_depend>hrim_actuator_gripper_srvs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hrim_actuator_gripper_msgs</exec_depend>
  <exec_depend>hrim_actuator_gripper_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
